--- a/w04/styles/index.css
+++ b/w04/styles/index.css
@@ -1,3 +1,11 @@
 * {
-    background-color: "#FCA6C9"
+    background: #FCA6C9;
+}
+
+#nelson {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+    width: 20%;
 }
